<resources>
    <string name="app_name">Spirala</string>
    <string-array name="modSpinner">
        <item>Medicinski</item>
        <item>Kuharski</item>
        <item>Botanički</item>
    </string-array>
    <string-array name="bojaSPIN">
        <item>red</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>purple</item>
        <item>brown</item>
        <item>green</item>
    </string-array>
    <string name="reset">Reset</string>
    <string name="add_meal">Dodaj jelo</string>
    <string name="add_plant">Dodaj biljku</string>
    <string name="take_a_photo">Uslikaj biljku</string>
    <string name="plant_name">Naziv biljke</string>
    <string name="plant_family">Porodica biljke</string>
    <string name="medical_warning">Medicinsko upozorenje</string>
    <string name="meal">Jelo</string>
    <string name="medical_usage">Medicinska korist</string>
    <string name="climate_type">Klimatski tip</string>
    <string name="soil_type">Zemljisni tip</string>
    <string name="taste">Profil okusa</string>
    <string name="meals">Jela</string>
    <string name="quick_search">Pretraga</string>
</resources>