<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovaBiljkaActivity">

    <EditText
        android:id="@+id/nazivET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="3"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/porodicaET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/plant_name"/>

    <EditText
        android:id="@+id/porodicaET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="3"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/medicinskoUpozorenjeET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivET"
        android:hint="@string/plant_family"/>

    <EditText
        android:id="@+id/medicinskoUpozorenjeET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="3"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/jeloET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/porodicaET"
        android:hint="@string/medical_warning"/>

    <EditText
        android:id="@+id/jeloET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="3"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/medicinskaKoristLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicinskoUpozorenjeET"
        android:hint="@string/meal"/>
    <!--DODATI MULTIPLE CHOICE-->
    <ListView
        android:id="@+id/medicinskaKoristLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/klimatskiTipLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jeloET" />

    <ListView
        android:id="@+id/klimatskiTipLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/zemljisniTipLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicinskaKoristLV" />

    <ListView
        android:id="@+id/zemljisniTipLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/profilOkusaLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/klimatskiTipLV" />
    <!--DODATI OPCIJU ODABIRA SAMO JEDNOG ELEMENTA-->
    <ListView
        android:id="@+id/profilOkusaLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/jelaLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zemljisniTipLV" />
    <!--DEFAULT - JELA SE DODAJU-->
    <ListView
        android:id="@+id/jelaLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/dodajJeloBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilOkusaLV" />
    <!--MIJENJA SE FUNKCIONALNOST-->
    <Button
        android:id="@+id/dodajJeloBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dodajBiljkuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jelaLV" />

    <Button
        android:id="@+id/dodajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/uslikajBiljkuBtn"
        app:layout_constraintStart_toEndOf="@+id/dodajJeloBtn"
        app:layout_constraintTop_toBottomOf="@+id/jelaLV" />
    <!--
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"-->
    <Button
        android:id="@+id/uslikajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/take_a_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dodajBiljkuBtn"
        app:layout_constraintTop_toBottomOf="@+id/jelaLV" />
</androidx.constraintlayout.widget.ConstraintLayout>